environments/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phoenix-prod
  labels:
    app.kubernetes.io/part-of: phoenix-platform
    environment: prod
